--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"dependencies": {
 		"gatsby": "^2.24.85",
 		"gatsby-plugin-sass": "^2.3.22",
+		"gatsby-source-filesystem": "^2.4.1",
 		"node-sass": "^4.14.1",
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0"
