--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"gatsby-plugin-sharp": "^2.8.0",
 		"gatsby-remark-images": "^3.5.1",
 		"gatsby-remark-relative-images": "^1.1.1",
+		"gatsby-source-contentful": "^4.1.0",
 		"gatsby-source-filesystem": "^2.4.1",
 		"gatsby-transformer-remark": "^2.9.2",
 		"node-sass": "^4.14.1",
