--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"dependencies": {
 		"@contentful/rich-text-react-renderer": "^14.1.2",
 		"gatsby": "^2.24.85",
+		"gatsby-plugin-react-helmet": "^3.5.0",
 		"gatsby-plugin-sass": "^2.3.22",
 		"gatsby-plugin-sharp": "^2.8.0",
 		"gatsby-remark-images": "^3.5.1",
@@ -25,7 +26,8 @@
 		"gatsby-transformer-remark": "^2.9.2",
 		"node-sass": "^4.14.1",
 		"react": "^16.12.0",
-		"react-dom": "^16.12.0"
+		"react-dom": "^16.12.0",
+		"react-helmet": "^6.1.0"
 	},
 	"devDependencies": {
 		"env-cmd": "^10.1.0",
